fixing spacing on the theme

--- a/src/FunnelWeb.Web/Themes/Pastel/Content/Styles/Theme.css
+++ b/src/FunnelWeb.Web/Themes/Pastel/Content/Styles/Theme.css
@@ -121,7 +121,6 @@ h1, h2, h3, h4, h5, h6
     color: #0079b4;
     width: 300px;
     font-family: Trebuchet MS, Segoe UI, Arial, Sans-Serif;
-    margin-bottom: 10px;
 }
 
 .nav 
